Revert "Merge branch 'develop' into release/R45"
This reverts commit ad537a1dff74488fd9b9cca18c219adb00a05967, reversing
changes made to bfec498d3078203cd058924dddc2fefaaf489e1a.